# ai-lab

./: .gitignore  Makefile  README.md  justfile  pyproject.toml
.cursor/commands/: create-new-experiment.md
lab/: embeddings.ipynb
lab/agents/: agent-response-patterns.py  agent-that-summarizes-history.py  agent-that-trims-history.py  simple-agent-history.py  simple-agent-with-tools.py  simple-agent.py
lab/foundations/: embeddings.ipynb
src/embedding-foundations/: NOTES.md  introduction.ipynb  pyproject.toml
src/gb-340b/: 01_extract_raw.py  02_build_features_sql_style.py  03_build_labels_sql_style.py  04_train_backtest.py  05_score_new_period.py  06_report_run.py  07_assess_run_report.py  README.md  _common.py  _rule_features.py  pyproject.toml  run_pipeline.py
src/gb-340b/artifacts/: metrics.json  model.joblib  run_report.md  run_report_assessment.md
src/gb-340b/data/output/: scored_claims.parquet
src/gb-340b/data/stage/: ce_audit_outcomes.parquet  claim_fact.parquet  features_asof.parquet  tpa_determination.parquet  training_snapshots.parquet
src/gb-churn/: 01_extract_raw.py  02_build_features_sql_style.py  03_build_labels_sql_style.py  04_train_backtest.py  05_score_new_period.py  06_report_run.py  README.md  _common.py  pyproject.toml  run_pipeline.py
src/gb-churn/artifacts/: metrics.json  model.joblib  run_report.md
src/gb-churn/data/output/: scored_accounts.parquet
src/gb-churn/data/stage/: account_dim.parquet  churn_events.parquet  contract_monthly.parquet  features_asof.parquet  support_tickets.parquet  training_snapshots.parquet  usage_daily.parquet
src/hello-world-mcp/: client.py  pyproject.toml  server.py
src/history-compaction-framework/: CLOUD_COMPACTION_ARCHITECTURE.md  README.md  TODO.md  pyproject.toml
src/history-compaction-framework/src/history_compaction_framework/: __init__.py  agents.py  background.py  cli.py  diagnostics.py  engine.py  manager.py  models.py  projection.py  prompts.py  repl.py  session.py  staging.py  storage.py  token_estimation.py
src/memory-framework/: .gitignore  CLOUD_MEMORY_ARCHITECTURE.md  README.md  pyproject.toml
src/memory-framework/src/memory_framework/: __init__.py  agent_tools.py  agents.py  caps.py  cli.py  consolidation_runner.py  deps.py  extraction_runner.py  memory_maintenance.py  memory_scan.py  memory_select.py  memory_surface.py  prompts.py  store.py
src/pydantic-ai-agent-basic/: main.py  pyproject.toml
src/pydantic-ai-agent-tools/: main.py  pyproject.toml
src/pydantic-ai-agent-with-tools/: main.py  pyproject.toml
src/pydantic-ai-custom-instructions/: main.py  pyproject.toml
src/pydantic-ai-deep-researcher/: README.md  main.py  pyproject.toml
src/pydantic-ai-evaluations/: main.py  pyproject.toml
src/pydantic-ai-extended-planner/: main.py  pyproject.toml
src/pydantic-ai-history-summarizer/: main.py  pyproject.toml
src/pydantic-ai-history-trimmer/: main.py  pyproject.toml
src/pydantic-ai-human-approval/: README.md  agent.py  cli_workflow.py  main.py  pyproject.toml
src/pydantic-ai-human-approval/tools/: __init__.py  order.py  support_case.py
src/pydantic-ai-logfire/: main.py  pyproject.toml
src/pydantic-ai-output-basics/: _common.py  main.py  pattern_1.py  pyproject.toml
src/pydantic-ai-query-dataset/: main.py  pyproject.toml
src/pydantic-ai-response-patterns/: main.py  pattern_2.py  pattern_3.py  pyproject.toml
src/pydantic-ai-simple-agent/: main.py  pyproject.toml
src/text-to-speech/: main.py  pyproject.toml
