[project]
name = "ai-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "numexpr>=2.11.0",
    "numpy>=2.2.5",
    "openai[voice-helpers]>=1.76.2",
    "pandas>=2.2.3",
    "pydantic-ai>=0.3.6",
    "python-dotenv>=1.1.0",
]
