[project]
name = "ai-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.0",
    "ruff>=0.14.2",
]

[tool.uv.workspace]
members = ["src/*"]

[tool.ruff]
respect-gitignore = true
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "COM",  # flake8-commas
    "UP",   # pyupgrade
    "FAST", # FastAPI
    "PD",   # pandas-vet
    "NPY",  # NumPy-specific rules
]

ignore = [
    "E501",  # line-too-long (skip for now)
]
