[project]
name = "gb-340b"
version = "0.1.0"
description = "Staged synthetic 340B CE audit prioritization pipeline (SQL-style transformations)"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0",
    "joblib>=1.5",
    "numpy>=2.0",
    "pandas>=2.2",
    "pydantic-ai-slim[openai]>=0.2.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
]
