[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "history-compaction-framework"
version = "0.1.0"
description = "Reusable Pydantic AI framework for projected history compaction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic-ai>=1.78.0",
  "tiktoken>=0.9.0",
]

[project.scripts]
history-compaction-framework = "history_compaction_framework.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
