[project]
name = "pydantic-ai-deep-researcher"
version = "0.1.0"
description = "Graph-driven iterative web research agent example"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.0.0",
    "pydantic>=2.12.3",
    "pydantic-ai>=1.78.0",
    "pydantic-graph>=1.78.0",
    "python-dotenv>=1.1.0",
    "rich>=14.2.0",
    "typer>=0.24.1",
]
